fix contrast nav bar links

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -38,6 +38,11 @@ h3 {
   color: var(--primary-color);
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 /* Custom styles classes */
 
 .text-shadow {
@@ -154,6 +159,16 @@ h3 {
   height: 50px;
 }
 
+.nav-link {
+  color: rgb(255, 255, 255);
+}
+
+.nav-link:hover {
+  color: rgb(255, 255, 255);
+  /* font-weight: 800; */
+  text-shadow: 1px 0px 6px #ffffff;
+}
+
 /* Header */
 
 .hero {
@@ -211,11 +226,6 @@ h3 {
 #footer a {
   font-size: 200%;
   padding: 0 10px;
-}
-
-html,
-body {
-  overflow-x: hidden;
 }
 
 #footer h6 {
